tests/NormalTests/paczka1/fuzzy1/97362665.err
Error in line 2: iJqbe2F S136 52,5
Error in line 3: iJqbe2F A510 74,7
Error in line 4: S223 S136 93,6
Error in line 12: sNVqU2eI A510 26,5
Error in line 9: 37uMhDkhKG S809 63,5
Error in line 34: LbIACAeFAYn S809 250,0
Error in line 37: LbIACAeFAYn S223 46,8
